fixed size and alignments

--- a/css/main.css
+++ b/css/main.css
@@ -148,8 +148,8 @@ Screen - Game
 #gamescreen
 {
    position: absolute;
-   width: 100%;
-   height: 100%;
+   width: 740px;
+   height: 600px;
 }
 
 #sky
@@ -207,7 +207,7 @@ Screen - Game
 {
    position: absolute;
    top: 20px;
-   left: 150px;
+   left: 350px;
    z-index: 100;
 }
 
@@ -222,7 +222,7 @@ Screen - Game
    position: absolute;
    opacity: 0;
    top: 75px;
-   left: 65px;
+   left: 270px;
    width: 188px;
    height: 170px;
    background-image: url('../assets/splash.png');
@@ -260,7 +260,7 @@ Screen - Game
    display: none;
    opacity: 0;
    top: 64px;
-   left: 43px;
+   left: 250px;
    width: 236px;
    height: 280px;
    background-image: url('../assets/scoreboard.png');
